[gd_scene load_steps=3 format=3 uid="uid://b33jmahx3vm31"]

[ext_resource type="Script" uid="uid://ukvc33btm12r" path="res://ui/ui.gd" id="1_nb4k0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nb4k0"]
draw_center = false

[node name="Ui" type="CanvasLayer"]
script = ExtResource("1_nb4k0")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -31.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_nb4k0")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2
alignment = 1

[node name="NextPageButton" type="Button" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Next"

[node name="SaveButton" type="Button" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Save"

[node name="AddButton" type="Button" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Add"

[node name="PrevPageButton" type="Button" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Prev"

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
file_mode = 0
access = 2
filters = PackedStringArray("*.png", "*.jpg", "*.jpeg", "*.webp", "*.svg")
use_native_dialog = true
